# SFEMaNS

./: .gitignore  README.md  index.html
CTEST_SUITE/: CMakeLists.txt  README  variables.cmake
DEBUG/: CMakeLists.txt  variables_template.cmake
DOC/: boldfonts.sty  mydef.sty  sfemans_doc.tex
DOC/DOC/: mydef.sty  sfemans_doc.tex
DOXYGEN_DOCUMENTATION/: Doxyfile  DoxygenLayout.xml  README_update_doc  about.h  customdoxygen.css  doc_SFEMaNS_condlim.h  doc_SFEMaNS_condlim_Eexact_gauss.h  doc_SFEMaNS_condlim_H_B_quasi_static.h  doc_SFEMaNS_condlim_Hexact.h  doc_SFEMaNS_condlim_Jexact_gauss.h  doc_SFEMaNS_condlim_Phiexact.h  doc_SFEMaNS_condlim_Vexact.h  doc_SFEMaNS_condlim_extension_vel.h  doc_SFEMaNS_condlim_grad_mu_bar_in_fourier_space.h  doc_SFEMaNS_condlim_imposed_velocity_by_penalty.h  doc_SFEMaNS_condlim_init_level_set.h  doc_SFEMaNS_condlim_init_maxwell.h  doc_SFEMaNS_condlim_init_temperature.h  doc_SFEMaNS_condlim_init_velocity_pressure.h  doc_SFEMaNS_condlim_kelvin_force_coeff.h  doc_SFEMaNS_condlim_level_set_exact.h  doc_SFEMaNS_condlim_mu_bar_in_fourier_space.h  doc_SFEMaNS_condlim_mu_in_real_space.h  doc_SFEMaNS_condlim_penal_in_real_space.h  doc_SFEMaNS_condlim_pp_exact.h  doc_SFEMaNS_condlim_sigma_bar_in_fourier_space.h  doc_SFEMaNS_condlim_source_in_NS.h  doc_SFEMaNS_condlim_source_in_level_set.h  doc_SFEMaNS_condlim_source_in_temperature.h  doc_SFEMaNS_condlim_temperature_exact.h  doc_SFEMaNS_condlim_vv_exact.h  doc_SFEMaNS_data.h  doc_SFEMaNS_main.h  doc_SFEMaNS_notations.h  doc_SFEMaNS_read_user_data.h  doc_SFEMaNS_tools_post_processing.h  doc_computation_with_SFEMaNS.h  doc_debug_test.h  doc_debug_test_01.h  doc_debug_test_02.h  (+55 more)
FEMSUB/: chaine_caractere.F90  dir_nodes.F90  sub_plot.f90
FEMSUB_OBJET/: associate_gauss.F90  fem_tn_axi.f90  fem_tn_navier_mhd.f90  type_matrix.f90
FEMSUB_PARALLEL/: create_communicators.f90  def_type_mesh.f90  fft_parallel.F90  fft_parallel.f90  plot_vtk.F90  prep_mesh.F90  solver.F90  st_csr.F90  two_dim_metis_distribution.F90
FEMSUB_SFEMaNS/: assembling_rhs.F90  computing_rhs_gauss.f90  entropy_viscosity.f90  fem_M_axi.F90  fourier_real.F90  initialization.F90  maxwell_update_time_with_B.F90  maxwell_update_time_with_B.f90  maxwell_update_time_with_H.F90  maxwell_update_time_with_H.f90  metis_distribution_sfemans.f90  read_my_data.F90  restart.f90  sub_level_set.f90  sub_mass.f90  sub_maxwell.F90  sub_ns_with_momentum.f90  sub_taylor_navier_stokes.f90  sub_temperature.f90  symmetry.f90  tn_axi.f90  tools.f90
GAUSS_POINTS_OBJET/: GP_2D_p1.f90  GP_2D_p2.f90  GP_2D_p3.f90  basis_change.f90  gauss_points_2d.f90
HYPERBOLIC_EQS/ADV_DIFF/: condlim.F90  data  main.f90  make.inc  mesh.F90  my_make_template
HYPERBOLIC_EQS/TOOLS/: vtu_xml_two_dim_plots.f90
INSTALL/: CMakeLists.txt  variables.cmake  variables_template.cmake
LIBS/: CMakeLists.txt
MESH_INTERPOLATION/: data_interpol_template  main_mesh_interpol.f90  mesh_interpolation  mesh_interpolation.f90  my_make_mesh_interpol
MHD_DATA_TEST_CONV_PETSC/: CYL10_TCM_PERIO_form.FEM  ELL_b0p8_10_form.FEM  Mesh_BENCH1_20.FEM  SOLID_FLUID_20.FEM  VKS_MND_form_10.FEM  abstract_interface.f90  condlim_module.f90  condlim_test_1.F90  condlim_test_10.f90  condlim_test_11.f90  condlim_test_12.f90  condlim_test_13.f90  condlim_test_18.f90  condlim_test_2.f90  condlim_test_20.f90  condlim_test_21.f90  condlim_test_23.f90  condlim_test_25.f90  condlim_test_26.f90  condlim_test_28.f90  condlim_test_29.f90  condlim_test_3.F90  condlim_test_30.f90  condlim_test_31.F90  condlim_test_32.F90  condlim_test_34.f90  condlim_test_35.F90  condlim_test_36.f90  condlim_test_37.f90  condlim_test_38.f90  condlim_test_39.f90  condlim_test_4.f90  condlim_test_5.f90  condlim_test_6.f90  condlim_test_7.f90  condlim_test_8.f90  condlim_test_9.f90  debug_data_1  debug_data_10  debug_data_11  (+30 more)
REGRESSION/: CMakeLists.txt  regression_SFEMaNS  variables_template.cmake
REGRESSION_SUITE/: README_LIST_TESTS
REGRESSION_SUITE/MESHES/: 2rects_10_form_0p0125.FEM  LMB_cake_setup_home_0p001_0p0025.FEM  LMB_cake_setup_home_0p001_0p005.FEM  Mesh_10_form.FEM  Mesh_20_form.FEM  Mesh_40_form.FEM  RECT10_MULTIPHASE_TEMP.FEM  RECT47_R1_H1p2_1p6_2p0_2p4_h0p05_sym.FEM  RECT_10.FEM  RIGA_Ri1_Ro2_H8_0p2_vac8_1.FEM  SOLID_FLUID_10.FEM  mesh_17_0.1.FEM  mesh_18_0.025.FEM  mesh_18_0.05.FEM  mesh_26_0.03.FEM  mesh_T28_0_04_04_ext3.FEM  sphere_0.05_form.FEM
REGRESSION_SUITE/TEST1/: CMakeLists.txt
REGRESSION_SUITE/TEST10/: CMakeLists.txt
REGRESSION_SUITE/TEST11/: CMakeLists.txt
REGRESSION_SUITE/TEST12/: CMakeLists.txt
REGRESSION_SUITE/TEST13/: CMakeLists.txt
REGRESSION_SUITE/TEST14/: CMakeLists.txt
REGRESSION_SUITE/TEST15/: CMakeLists.txt
REGRESSION_SUITE/TEST16/: CMakeLists.txt
REGRESSION_SUITE/TEST17/: CMakeLists.txt
REGRESSION_SUITE/TEST18/: CMakeLists.txt
REGRESSION_SUITE/TEST19_20/: CMakeLists.txt  dummy_regression_reference
REGRESSION_SUITE/TEST2/: CMakeLists.txt
REGRESSION_SUITE/TEST21/: CMakeLists.txt
REGRESSION_SUITE/TEST22/: CMakeLists.txt
REGRESSION_SUITE/TEST23/: CMakeLists.txt
REGRESSION_SUITE/TEST24/: CMakeLists.txt
REGRESSION_SUITE/TEST25/: CMakeLists.txt
REGRESSION_SUITE/TEST26/: CMakeLists.txt
REGRESSION_SUITE/TEST27/: CMakeLists.txt
REGRESSION_SUITE/TEST28/: CMakeLists.txt
REGRESSION_SUITE/TEST29/: CMakeLists.txt
REGRESSION_SUITE/TEST3/: CMakeLists.txt
REGRESSION_SUITE/TEST30/: CMakeLists.txt
REGRESSION_SUITE/TEST39/: CMakeLists.txt
REGRESSION_SUITE/TEST39/LOCAL_SOURCES/: condlim.F90
REGRESSION_SUITE/TEST39/REGRESSION_TESTS/: data  job.sh  regression_reference
TEMPLATE/: CMakeLists.txt  CMakeLists_developer.txt  README  condlim.F90  condlim.f90  data  debug_SFEMaNS_template  fmkmf.pl  list_data_queries  main.F90  main.F90_updated_output  main.f90  make.inc_template  my_make_template  read_user_data.F90  variables_template.cmake
TEMPLATE/EXAMPLES_VARIABLES_CMAKE/: variables.cmake_TAMU_cluster  variables.cmake_UH_cluster  variables.cmake_jeanzay  variables.cmake_ruche  variables.cmake_tgcc
TEMPLATE/LOCAL_SOURCES/: condlim.F90
WRITE_BLOCK_MM/: write_block_f.f90
(+425 files in other folders)
